* over time. Changes file history has also been merged, so entries for these  *
* merged distributions can be found further down in the file.                 *
*******************************************************************************

{{$NEXT}}

    - Fix debugging info when JSON::MaybeXS is missing (Thanks James E Keenan)
    - Fix typos (Thanks sobrado8086)

1.302206  2024-12-19 17:51:07-08:00 America/Los_Angeles

    - Remove Test::Builder::IO::Scalar
    - Fix #1016

1.302205  2024-12-19 09:28:05-08:00 America/Los_Angeles

    - Use our instead of 'use vars'
    - Fix $[ usage
    - Doc updates

1.302204  2024-09-14 10:32:25-07:00 America/Los_Angeles

    - Add pending diagnostics functionality
    - Show warnings/exceptions for no_warnings() and lives()

1.302203  2024-09-04 16:15:07-07:00 America/Los_Angeles

    - Fix some tests when run on windows

1.302202  2024-09-02 16:27:17-07:00 America/Los_Angeles

    - Add comment on how to make tables bigger, #931
    - Typo fix

1.302201  2024-08-13 08:19:01-07:00 America/Los_Angeles

    - Fix bug found by new warnings in blead (Thanks Mauke)

1.302200  2024-08-04 11:22:17-07:00 America/Los_Angeles

    - Merge Test2-Suite into Test-Simple
    - Some doc updates
    - Some test fixes

1.302199  2024-04-25 15:05:00+01:00 Europe/Lisbon

    - Minor fixes

1.302198  2023-11-30 10:07:14-08:00 America/Los_Angeles

    - Remove use of defined-or operator

1.302197  2023-11-28 17:30:37-08:00 America/Los_Angeles

    - Add ability to attach timestamps to trace objects via api or env var

1.302196  2023-10-24 10:27:33-07:00 America/Los_Angeles

    - Fix #882
    - Fix handling of VSTRING and LVALUE refs in is_deeply() #918
    - Merge several doc fixes from mauke

1.302195  2023-04-28 05:55:54-07:00 America/Los_Angeles

    - Fix done_testing(0) producing 2 plans and an incorrect message

1.302194  2023-03-13 20:06:57-07:00 America/Los_Angeles

    - Fix failing test on 5.10
