@@ -8,6 +8,8 @@
 
     - Fix debugging info when JSON::MaybeXS is missing (Thanks James E Keenan)
     - Fix typos (Thanks sobrado8086)
+    - Add TEST2_ENABLE_PLUGINS env var
+    - Add Test2::Env docs
 
 1.302206  2024-12-19 17:51:07-08:00 America/Los_Angeles
 
